Changelog
=======================================================
28042012:
1, rewrite screensaver switch script(screen.py)