@@ -44,3 +44,4 @@ start using testing branch for experimental purpose
 28042012:
 	MyMplayer (SotongDJ's Mplayer Playback Script Set)
 		1, rewrite screensaver switch script(screen.py)
+		2, modify diff.sh to prevent accidentally agreement (if you press enter frequently)
