@@ -1,5 +1,5 @@
 #!/bin/sh
-## echo 6, ## 5, sh 1, read 1, diff 19, rm 2, cat 1
+## echo 9, ## 4, read 1, diff 19, rm 2, gedit 1
 echo ============================================
 echo "compare scripts (between kindle and com.)"
 echo --------------------------------------------
@@ -24,7 +24,11 @@ diff /media/Kindle/launchpad/SotongDJ.ini ~/github/launchpad-kindle/launchpad/So
 diff /media/Kindle/launchpad/mplayer.ini ~/github/launchpad-kindle/launchpad/mplayer.ini >> /tmp/difftemp
 ##
 diff /media/Kindle/mplayer/control.sh ~/github/launchpad-kindle/mplayer/control.sh >> /tmp/difftemp
-cat /tmp/difftemp |more
+gedit /tmp/difftemp
+echo --------------------------------------------
+echo "Press any key to continue the process"
+read null
+echo --------------------------------------------
 rm /tmp/difftemp
 echo --------------------------------------------
 echo remove temp files
